--- a/Web/Views/Producto/Create.cshtml
+++ b/Web/Views/Producto/Create.cshtml
@@ -22,18 +22,26 @@
                 <div class="mb-3">
                     @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "form-label" })
                     @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+
                 </div>
                 <div class="mb-3">
                     @Html.LabelFor(model => model.Marca, htmlAttributes: new { @class = "form-label" })
                     @Html.TextBoxFor(model => model.Marca, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Marca, "", new { @class = "text-danger" })
+
                 </div>
                 <div class="mb-3">
                     @Html.LabelFor(model => model.Precio, htmlAttributes: new { @class = "form-label" })
                     @Html.TextBoxFor(model => model.Precio, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Precio, "", new { @class = "text-danger" })
+
                 </div>
                 <div class="mb-3">
                     @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "form-label" })
                     @Html.DropDownListFor(model => model.Estado, new SelectList(new[] { "Nuevo", "Usado", "Seminuevo" }), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
+
                 </div>
                 <div class="mb-3">
                     @Html.LabelFor(model => model.Categoria, htmlAttributes: new { @class = "form-label" })
@@ -50,6 +58,8 @@
                 <div class="mb-3">
                     @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "form-label" })
                     @Html.TextAreaFor(model => model.Descripcion, new { @class = "form-control", rows = "4" })
+                    @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+
                 </div>
             </div>
         </div>
