autorizaciones y cambio de estado de usuarios

--- a/Web/Views/Producto/ProductoTienda.cshtml
+++ b/Web/Views/Producto/ProductoTienda.cshtml
@@ -22,9 +22,11 @@
                             <h5 class="card-title"> @Html.DisplayFor(modelItem => item.Descripcion) </h5>
                             <div class="btn-group d-flex" role="group">
                                 <a href="@Url.Action("Details","Producto",new {id= item.Id})" class="btn  text-white btn flex-grow-1 pt-2" style="background: var(--color-secondary-variant) ">Detalles</a>
-                                <button type="button" class="btn flex-grow-0" style="background: var(--color-danger) ">
+                                @*<button type="button" class="btn flex-grow-0" style="background: var(--color-danger) ">
                                     <span class="material-symbols-outlined text-white">edit</span>
-                                </button>
+                                </button>*@
+                                <a href="@Url.Action("Edit","Producto",new {id= item.Id})" class="btn  text-white btn flex-grow-0 pt-2" style="background: var(--color-danger) "><span class="material-symbols-outlined text-white">edit</span></a>
+
 
                                 @*<button type="button" class="btn bg-primary">
             <span class="material-symbols-outlined text-white">info</span>
@@ -38,4 +40,3 @@
     </div>
 
 
-</div>
