--- a/Web/Views/Shared/_Menu.cshtml
+++ b/Web/Views/Shared/_Menu.cshtml
@@ -23,7 +23,7 @@
                         {
                             <div class="d-flex justify-content-center align-items-center w-100 p-2">
                                 <span class="material-symbols-outlined"> assignment_ind</span>
-                                <a href="@Url.Action("Perfil", "Usuario")" class="dropdown-item"> Perfil</a>
+                                <a href="@Url.Action("PerfilUsuario", "Usuario")" class="dropdown-item"> Perfil</a>
                             </div>
                         }
 
