--- a/Web/Views/Shared/_SideBar.cshtml
+++ b/Web/Views/Shared/_SideBar.cshtml
@@ -13,26 +13,6 @@
         <div href="#" class="active">
             <span class="material-symbols-outlined"> grid_view </span>
             @Html.ActionLink("Dashboard", "DashboardTienda", "Home", null, new { @class = "primary" })
-
-
-
-        </div>
-        <div>
-            <span class="material-symbols-outlined">takeout_dining</span>
-            @Html.ActionLink("Inventario", "ProductoAdminTienda", "Producto", null, new { @class = "" })
-            @*<h3>Products</h3>*@
-        </div>
-
-        <div>
-            <span class="material-symbols-outlined"> inventory </span>
-            @Html.ActionLink("Pedidos Tienda", "CompraTienda", "Compra", null, new { @class = "" })
-            @*<h3>Products</h3>*@
-        </div>
-
-        <div>
-            <span class="material-symbols-outlined"> inventory </span>
-            @Html.ActionLink("Productos Admin", "ProductoAdmin", "Producto", null, new { @class = "" })
-            @*<h3>Products</h3>*@
         </div>
 
         @*
@@ -111,17 +91,23 @@
                 {
                     <div>
                         <span class="material-symbols-outlined"> inventory </span>
-                        @Html.ActionLink("Productos Admin", "ProductoAdmin", "Producto", null, new { @class = "" })
+                        @Html.ActionLink("Productos", "ProductoAdmin", "Producto", null, new { @class = "" })
                         @*<h3>Products</h3>*@
                     </div>
 
                     <div>
                         <span class="material-symbols-outlined"> group </span>
-                        @Html.ActionLink("Usuarios", "ProductoAdmin", "Producto", null, new { @class = "" })
+                        @Html.ActionLink("Usuarios", "Usuarios", "Usuario", null, new { @class = "" })
                     </div>
                 }
                 if (!admin)
                 {
+                    <div>
+                        <span class="material-symbols-outlined">takeout_dining</span>
+                        @Html.ActionLink("Inventario", "ProductoAdminTienda", "Producto", null, new { @class = "" })
+                        @*<h3>Products</h3>*@
+                    </div>
+
                     <div>
                         <span class="material-symbols-outlined"> inventory </span>
                         @Html.ActionLink("Productos", "ProductoTienda", "Producto", null, new { @class = "" })
