add view detail of pedido by customer

--- a/Web/Views/Shared/_Menu.cshtml
+++ b/Web/Views/Shared/_Menu.cshtml
@@ -71,6 +71,12 @@
                                         <span class="material-symbols-outlined"> add</span>
                                         <a href="@Url.Action("AfiliarseForm", "Login")" class="dropdown-item"> Afiliarse</a>
                                     </div>
+                                    <div class="d-flex justify-content-center align-items-center w-100 p-2">
+                                        <span class="material-symbols-outlined">
+                                            select_check_box
+                                        </span>
+                                        <a href="@Url.Action("ComprasXCliente", "Compra")" class="dropdown-item"> Mis pedidos</a>
+                                    </div>
                                 }
                                 if (flat == 2)
                                 {
