--- a/Web/Views/Compra/ConfirmarCompra.cshtml
+++ b/Web/Views/Compra/ConfirmarCompra.cshtml
@@ -91,7 +91,7 @@
 
 
         <div class="w-100 d-flex justify-content-end">
-            <a href="@Url.Action("ConfirmarCompra", "Compra")" class="btn btn-success float-right" id="btnOrdenar">
+            <a href="@Url.Action("ComprasXCliente", "Compra")" class="btn btn-success float-right" id="btnOrdenar">
                 <span class="glyphicon glyphicon-floppy-save"></span>
                 ConfirmarCompra
             </a>
