chart y modal de evaluaciones

--- a/Web/Views/Shared/_SideBar.cshtml
+++ b/Web/Views/Shared/_SideBar.cshtml
@@ -99,6 +99,13 @@
                         <span class="material-symbols-outlined"> group </span>
                         @Html.ActionLink("Usuarios", "Usuarios", "Usuario", null, new { @class = "" })
                     </div>
+
+
+                    <div>
+                        <span class="material-symbols-outlined"> group </span>
+                        @Html.ActionLink("Ventas", "graficoCompraCount", "Reporte", null, new { @class = "" })
+                    </div>
+
                 }
                 if (!admin)
                 {
