--- a/Web/Content/Site.css
+++ b/Web/Content/Site.css
@@ -1323,6 +1323,158 @@ th {
 }
 
 
+/*============== evaluaciones ===============*/
+
+.container {
+    display: flex;
+    flex-direction: row !important;
+    justify-content: center;
+    width: 100%;
+}
+
+    .container .post {
+        display: none;
+    }
+
+    .container .text {
+        font-size: 25px;
+        color: #666;
+        font-weight: 500;
+    }
+
+    .container .edit {
+        position: absolute;
+        right: 10px;
+        top: 5px;
+        font-size: 16px;
+        color: #666;
+        font-weight: 500;
+        cursor: pointer;
+    }
+
+        .container .edit:hover {
+            text-decoration: underline;
+        }
+
+    .container .star-widget input {
+        display: none;
+    }
+
+.star-widget label {
+    font-size: 25px;
+    color: #444;
+    padding-right: 10px;
+    float: right;
+    transition: all 0.2s ease;
+}
+
+input:not(:checked) ~ label:hover,
+input:not(:checked) ~ label:hover ~ label {
+    color: #fd4;
+}
+
+input:checked ~ label {
+    color: #fd4;
+}
+
+input#rate-5:checked ~ label {
+    color: #fe7;
+    text-shadow: 0 0 20px #952;
+}
+
+#rate-1:checked ~ form span:before {
+    content: "¡Lo odio!";
+}
+
+#rate-2:checked ~ form span:before {
+    content: "¡No me gusta!";
+}
+
+#rate-3:checked ~ form span:before {
+    content: "¡Está bien!";
+}
+
+#rate-4:checked ~ form span:before {
+    content: "¡Me gusta!";
+}
+
+#rate-5:checked ~ form span:before {
+    content: "¡Me encanta!";
+}   
+
+.container form {
+    display: none;
+}
+
+input:checked ~ form {
+    display: block;
+}
+
+form span {
+    width: 100%;
+    font-size: 25px;
+    color: #fe7;
+    font-weight: 500;
+    margin: 5px 0 10px 0;
+    text-align: center;
+    transition: all 0.2s ease;
+}
+
+form .textarea {
+    height: 100px;
+    width: 100%;
+    overflow: hidden;
+}
+
+    form .textarea textarea {
+        height: 100%;
+        width: 100%;
+        outline: none;
+        color: #eee;
+        border: 1px solid #333;
+        background: #222;
+        padding: 10px;
+        font-size: 14px;
+        resize: none;
+    }
+
+.textarea textarea:focus {
+    border-color: #444;
+}
+
+form .btn {
+    height: 30px;
+    width: 100%;
+    margin: 15px 0 !important;
+}
+
+    form .btn button {
+        height: 100%;
+        width: 100%;
+        border: 1px solid #444;
+        outline: none;
+        background: #222;
+        color: #999;
+        font-size: 12px;
+        font-weight: 500;
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: all 0.3s ease;
+    }
+
+        form .btn button:hover {
+            background: #1b1b1b;
+        }
+
+.product-item span {
+    /*    list-style: none;
+    padding: 0;
+    margin: 0;*/
+    font-size: 17px !important;
+    color: var(--gray-nav) !important;
+}
+
+
 /* ======================= media query para Login  =================*/
 @media screen and (max-width: 768px) {
     .view-container {
