--- a/Web/Views/Home/DashboardTienda.cshtml
+++ b/Web/Views/Home/DashboardTienda.cshtml
@@ -5,17 +5,51 @@
 
 @model IEnumerable<Infraestructure.Models.Producto>
 
-@using Infraestructure.Models
 
-@{
-    // Convertir el modelo a IEnumerable<Producto>
-    IEnumerable<Producto> modeloProductos = Model as IEnumerable<Producto>;
+<div>
+    <canvas id="grafico1"></canvas>
+</div>
+
+<div>
+    <canvas id="grafico2"></canvas>
+</div>
+
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryajax")
+    <!-- Librería para gráficos -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.bundle.min.js"></script>
+    <script src="~/Scripts/graficoChartJS.js"></script>
+
+    <script type="text/javascript">
+
+        var colores = @Html.Raw(Json.Encode(ViewBag.graficoCountSells.Colores));
+        colores = colores.split(",");
+        var etiquetas = @Html.Raw(Json.Encode(ViewBag.graficoCountSells.Etiquetas));
+        etiquetas = etiquetas.split(",");
+        var valores = @Html.Raw(Json.Encode(ViewBag.graficoCountSells.Valores));
+        valores = valores.split(",");
+        var titulo = @Html.Raw(Json.Encode(ViewBag.graficoCountSells.titulo));
+        var tituloEtiquetas = @Html.Raw(Json.Encode(ViewBag.graficoCountSells.tituloEtiquetas));
+        var tipo = @Html.Raw(Json.Encode(ViewBag.graficoCountSells.tipo));
+
+        // Pintar el primer gráfico en el canvas "grafico1"
+        pintarGrafico("grafico1", titulo, tituloEtiquetas, tipo, colores, etiquetas, valores);
+
+
+
+
+        var colores2 = @Html.Raw(Json.Encode(ViewBag.graficoTopSells.Colores));
+        colores2 = colores2.split(",");
+        var etiquetas2 = @Html.Raw(Json.Encode(ViewBag.graficoTopSells.Etiquetas));
+        etiquetas2 = etiquetas2.split(",");
+        var valores2 = @Html.Raw(Json.Encode(ViewBag.graficoTopSells.Valores));
+        valores2 = valores2.split(",");
+        var titulo2 = @Html.Raw(Json.Encode(ViewBag.graficoTopSells.titulo));
+        var tituloEtiquetas2 = @Html.Raw(Json.Encode(ViewBag.graficoTopSells.tituloEtiquetas));
+        var tipo2 = @Html.Raw(Json.Encode(ViewBag.graficoTopSells.tipo));
+
+        pintarGrafico("grafico2", titulo2, tituloEtiquetas2, tipo2, colores2, etiquetas2, valores2);
+    </script>
 }
-
-
-
-@*<div class="">
-
-    @Html.Partial("~/Views/Producto/_ProductoTienda.cshtml", modeloProductos)
-
-</div>*@
