--- a/Web/Views/Reporte/_GraficoCompraCount.cshtml
+++ b/Web/Views/Reporte/_GraficoCompraCount.cshtml
@@ -1,9 +1,12 @@
 ﻿
-@model Web.ViewModel.ViewModelGrafico
-
+@{
+    ViewBag.Title = "graficoCompraCount";
+    Layout = "~/Views/Home/DashboardTienda.cshtml";
+}
 
 <div>
     <canvas id="grafico"></canvas>
+    <canvas id="grafico2"></canvas>
 </div>
 
 
