--- a/Web/Views/Shared/_LayoutTienda.cshtml
+++ b/Web/Views/Shared/_LayoutTienda.cshtml
@@ -133,7 +133,7 @@
     @RenderSection("scripts", required: false)
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="~/Scripts/bootstrap.bundle.js"></script>
-    <script src="~/Scripts/script.js?v=1.0"></script>
+    <script src="~/Scripts/script.js"></script>
 
 
     <link href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css" rel="stylesheet" />
