--- a/Web/Views/Compra/EvaluationCompraCliente.cshtml
+++ b/Web/Views/Compra/EvaluationCompraCliente.cshtml
@@ -48,7 +48,8 @@
                             <div class="star-widget w-75">
 
                                 <input value="5" type="radio" name="rate" id="rate-5">
-                                <label for="rate-5" class="fas fa-star text-center"></label>
+                                @*<label for="rate-5" class="fas fa-star text-center"></label>*@
+                                <label for="rate-5" class='bx bx-star'></label>
                                 <input value="4" type="radio" name="rate" id="rate-4">
                                 <label for="rate-4" class="fas fa-star"></label>
                                 <input value="3" type="radio" name="rate" id="rate-3">
