--- a/Web/Views/Shared/_LayoutTienda.cshtml
+++ b/Web/Views/Shared/_LayoutTienda.cshtml
@@ -15,6 +15,11 @@
 
     <link href="~/Content/Site.css?v=1.0" rel="stylesheet" />
 
+    <!-- Fontawesome CDN Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+
+
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
