--- a/Web/Views/Compra/ComprasXCliente.cshtml
+++ b/Web/Views/Compra/ComprasXCliente.cshtml
@@ -7,57 +7,117 @@
 
 
 
-<div class="content">
-    <h1 id="producto-titulo" class="producto-titulo text-center mb-5" style=" color: var(--gray-nav) !important; font-size: 2.3rem !important;">Pedidos</h1>
 
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Fecha Pedido</th>
-                <th># Pedido</th>
-                <th>Producto</th>
+<h1 id="producto-titulo" class="producto-titulo text-center mb-5" style=" color: var(--gray-nav) !important; font-size: 2.3rem !important;">Mis Pedidos</h1>
 
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
+<div class="card">
 
-                    <td>@Html.DisplayFor(f => item.FechaHora)</td>
+    <div class="card-body">
 
-                    <td>@Html.DisplayFor(m => item.Id)</td>
+        <div class="row">
+            <div class="col-sm-12">
 
-                    @if (item.Estado == 3)
-                    {
-                        <td><span class="text-success fw-bold">Entregado</span></td>
-                    }
-                    @if (item.Estado == 2)
-                    {
-                        <td><span class="text-warning fw-bold">En progreso</span></td>
+                @*<table class="table table-bordered" id="tb_empleados">*@
 
-                    }
-                    @if (item.Estado == 1)
-                    {
-                        <td><span class="text-danger fw-bold">Pendiente</span></td>
+                <table class="display" id="tb_producto" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th># Pedido</th>
+                            <th>Fecha y hora del pedido</th>
+                            <th>Direccion</th>
+                            <th>Estado</th>
+                            <th>Acciones</th>
 
-                    }
+                        </tr>
+                    </thead>
+                    <tbody>
 
-                    <td>
-                        <a href="@Url.Action("Details", "Compra", new { id = item.Id })" class="btn  text-white btn flex-grow-1 pt-2" style="background: var(--color-secondary-variant) ">
-                            <span class="material-symbols-outlined">
-                                info
-                            </span>
-                        </a>
+                        @{
+                            foreach (var item in Model)
+                            {
+                                
 
-                    </td>
+                                                <tr>
+                                                    <td>@item.Id</td>
+                                                    <td>@Html.DisplayFor(f => item.FechaHora)</td>
+                                                    <td>@item.Direccion</td>
+                                                    @if (item.Estado == 3)
+                                                    {
+                                                        <td><span class="text-success fw-bold">Entregado</span></td>
+                                                    }
+                                                    @if (item.Estado == 2)
+                                                    {
+                                                        <td><span class="text-warning fw-bold">En progreso</span></td>
 
-                </tr>
+                                                    }
+                                                    @if (item.Estado == 1)
+                                                    {
+                                                        <td><span class="text-danger fw-bold">Pendiente</span></td>
 
-            }
+                                                    }
 
-        </tbody>
-    </table>
+                                                    <td>
+                                                        <a href="@Url.Action("Details", "Compra", new { id = item.Id })" class="btn  text-white btn flex-grow-1 pt-2" style="background: var(--color-secondary-variant) ">
+                                                            <span class="material-symbols-outlined">
+                                                                info
+                                                            </span>
+                                                        </a>
+                                                        @if (item.Estado == 3)
+                                                        {
+                                                            <a href="@Url.Action("EvaluationCompraVendedor", "Compra", new { id = item.Id })" class="btnEstado btn  text-white btn flex-grow-1 pt-2" style="background: green ">
+                                                                <span class="material-symbols-outlined">
+                                                                    star
+                                                                </span>
+                                                            </a>
 
+                                                        }
+                                                    </td>
+                                                    >
+                                                </tr>
+                                    
+                                
+                            }
+                        }
+
+                    </tbody>
+
+                </table>
+
+            </div>
+        </div>
+
+
+    </div>
 </div>
+
+
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+@*<script>
+    $(document).ready(function () {
+        // Manejador de evento click para el botón de eliminar
+        $(".btnEstado").click(function () {
+            var compraId = $(this).data("id");
+            var productoId = $(this).data("vendorid");
+
+
+            console.log('compra id=', compraId);
+            console.log('Producto id=', productoId);
+            //Realiza la petición Ajax para eliminar el producto
+            $.ajax({
+                url: "/Compra/UpdateStateDetail",
+                type: "POST",
+                data: { compraId: compraId, productoId: productoId },
+                success: function (data) {
+                    // Muestra el resultado de la eliminación en el elemento div
+                    $("#resultado").text(data);
+                    console.log("entrando")
+                },
+                error: function () {
+                    $("#resultado").text("Error al eliminar el producto.");
+                }
+            });
+        });
+    });
+</script>*@
